--- a/writeup/Makefile
+++ b/writeup/Makefile
@@ -8,5 +8,6 @@ thesis.pdf: *.tex references.bib reedthesis.cls
 
 .PHONY: clean
 clean:
+	-rm -f diff.tex
 	-rm -f *.snm *.nav *.vrb *.bbl *.dvi *.ps *.lot *.lof *.toc thesis.pdf thesis-tufte.pdf *.run.xml
 	latexmk -c
